[package]
name = "emping-ssg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
chrono = "0.4"
pulldown-cmark = "0.8.0"
yew-router = "0.15.0"
wasm-bindgen = "0.2.78"
yaml-rust = "0.4.5"
extract-frontmatter = "2.1.0"